Fix #441 - Update DM26 Statuses to indicate "enabled" instead of "supported" (#447)