@@ -4,6 +4,7 @@
 package org.etools.j1939_84.controllers.part1;
 
 import static org.etools.j1939_84.J1939_84.NL;
+import static org.etools.j1939_84.bus.j1939.packets.DM26TripDiagnosticReadinessPacket.PGN;
 import static org.etools.j1939_84.model.Outcome.FAIL;
 import static org.etools.j1939_84.model.Outcome.WARN;
 import static org.junit.Assert.assertEquals;
@@ -15,11 +16,9 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.Executor;
 import org.etools.j1939_84.bus.Packet;
 import org.etools.j1939_84.bus.j1939.J1939;
@@ -54,7 +53,6 @@ import org.mockito.junit.MockitoJUnitRunner;
 @RunWith(MockitoJUnitRunner.class)
 public class Step14ControllerTest extends AbstractControllerTest {
     private static final int PART_NUMBER = 1;
-    private static final int PGN = DM26TripDiagnosticReadinessPacket.PGN;
     private static final int STEP_NUMBER = 14;
 
     @Mock
@@ -128,11 +126,11 @@ public class Step14ControllerTest extends AbstractControllerTest {
      */
     @Test
     public void testEmptyPacketFailure() {
-        List<Integer> obdModuleAddresses = Collections.singletonList(0x01);
+        List<Integer> obdModuleAddresses = List.of(0x01);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -142,9 +140,9 @@ public class Step14ControllerTest extends AbstractControllerTest {
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM26(any());
 
-        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, "6.1.14.2.f. Fail if no OBD ECU provides DM26");
+        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, "6.1.14.2.f - No OBD ECU provided DM26");
 
-        String expectedResults = "FAIL: 6.1.14.2.f. Fail if no OBD ECU provides DM26" + NL;
+        String expectedResults = "FAIL: 6.1.14.2.f - No OBD ECU provided DM26" + NL;
         assertEquals(expectedResults, listener.getResults());
         assertEquals("", listener.getMessages());
         assertEquals("", listener.getMilestones());
@@ -160,12 +158,7 @@ public class Step14ControllerTest extends AbstractControllerTest {
                 Packet.create(PGN, 0x01, 0x11, 0x22, 0x33, 0x44, 0x55, 0x66, 0x77, 0x88));
         DM26TripDiagnosticReadinessPacket packet3 = new DM26TripDiagnosticReadinessPacket(
                 Packet.create(PGN, 0x03, 0x00, 0x00, 0x04, 0x00, 0xFF, 0xFF, 0xFF, 0xFF));
-        List<Integer> obdModuleAddresses = new ArrayList<>() {
-            {
-                add(0x01);
-                add(0x03);
-            }
-        };
+        List<Integer> obdModuleAddresses = List.of(0x01, 0x03);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
 
         DM26TripDiagnosticReadinessPacket obdPacket3 = new DM26TripDiagnosticReadinessPacket(
@@ -175,24 +168,14 @@ public class Step14ControllerTest extends AbstractControllerTest {
         OBDModuleInformation obdModule3 = new OBDModuleInformation(0x03);
         obdModule3.setMonitoredSystems(obdPacket3.getMonitoredSystems());
 
-        when(dataRepository.getObdModules()).thenReturn(new HashSet<>() {
-            {
-                add(obdModule1);
-                add(obdModule3);
-            }
-        });
+        when(dataRepository.getObdModules()).thenReturn(Set.of(obdModule1, obdModule3));
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, new ArrayList<>() {
-                    {
-                        add(packet1);
-                        add(packet3);
-                    }
-                }, Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1, packet3), List.of()));
         when(dtcModule.requestDM26(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
         when(dtcModule.requestDM26(any(), eq(0x03)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(obdPacket3), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(obdPacket3), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -208,52 +191,52 @@ public class Step14ControllerTest extends AbstractControllerTest {
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    Cold start aid system          not supported,       completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    Cold start aid system      not enabled,     complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    EGR/VVT system                 not supported,       completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    EGR/VVT system             not enabled,     complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    Exhaust Gas Sensor             not supported,   not completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    Exhaust Gas Sensor         not enabled, not complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    Heated catalyst                not supported,   not completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    Heated catalyst            not enabled, not complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    NMHC converting catalyst       not supported,       completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    NMHC converting catalyst   not enabled,     complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    NOx catalyst/adsorber          not supported,   not completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    NOx catalyst/adsorber      not enabled, not complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    Secondary air system           not supported,       completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    Secondary air system       not enabled,     complete");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.2.d Fail if any response indicates number of warm-ups since code clear is not zero" + NL
+                                        "6.1.14.2.d - Response indicates number of warm-ups since code clear is not zero" + NL
                                                 + "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                                                 + NL
                                                 + "DM26 from Transmission #1 (3): Warm-ups: 4, Time Since Engine Start: 0 seconds"
                                                 + NL);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.2.e Fail if any response indicates time since engine start is not zero" + NL +
+                                        "6.1.14.2.e - Response indicates time since engine start is not zero" + NL +
                                                 "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                                                 + NL);
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         WARN,
-                                        "6.1.14.3.a Warn if any individual required monitor, except Continuous Component Monitoring (CCM) is supported by more than one OBD ECU"
+                                        "6.1.14.3.a - An individual required monitor is supported by more than one OBD ECU"
                                                 + NL +
                                                 "A/C system refrigerant     has reporting from more than one OBD ECU" + NL +
                                                 "Boost pressure control sys has reporting from more than one OBD ECU" + NL +
@@ -262,57 +245,57 @@ public class Step14ControllerTest extends AbstractControllerTest {
                                                 "Evaporative system         has reporting from more than one OBD ECU" + NL +
                                                 "Exhaust Gas Sensor heater  has reporting from more than one OBD ECU");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.5.a Fail if any difference compared to data received during global request");
+                                        "6.1.14.5.a - Difference compared to data received during global request");
 
         String expectedResults = "" + NL;
         expectedResults += "Vehicle Composite of DM26:" + NL;
-        expectedResults += "    A/C system refrigerant             supported,   not completed" + NL;
-        expectedResults += "    Boost pressure control sys         supported,   not completed" + NL;
-        expectedResults += "    Catalyst                           supported,   not completed" + NL;
-        expectedResults += "    Cold start aid system              supported,   not completed" + NL;
-        expectedResults += "    Comprehensive component            supported,   not completed" + NL;
-        expectedResults += "    Diesel Particulate Filter          supported,   not completed" + NL;
-        expectedResults += "    EGR/VVT system                     supported,   not completed" + NL;
-        expectedResults += "    Evaporative system                 supported,   not completed" + NL;
-        expectedResults += "    Exhaust Gas Sensor                 supported,   not completed" + NL;
-        expectedResults += "    Exhaust Gas Sensor heater          supported,   not completed" + NL;
-        expectedResults += "    Fuel System                    not supported,       completed" + NL;
-        expectedResults += "    Heated catalyst                    supported,   not completed" + NL;
-        expectedResults += "    Misfire                        not supported,       completed" + NL;
-        expectedResults += "    NMHC converting catalyst           supported,   not completed" + NL;
-        expectedResults += "    NOx catalyst/adsorber              supported,   not completed" + NL;
-        expectedResults += "    Secondary air system               supported,   not completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    A/C system refrigerant         enabled, not complete" + NL;
+        expectedResults += "    Boost pressure control sys     enabled, not complete" + NL;
+        expectedResults += "    Catalyst                       enabled, not complete" + NL;
+        expectedResults += "    Cold start aid system          enabled, not complete" + NL;
+        expectedResults += "    Comprehensive component        enabled, not complete" + NL;
+        expectedResults += "    Diesel Particulate Filter      enabled, not complete" + NL;
+        expectedResults += "    EGR/VVT system                 enabled, not complete" + NL;
+        expectedResults += "    Evaporative system             enabled, not complete" + NL;
+        expectedResults += "    Exhaust Gas Sensor             enabled, not complete" + NL;
+        expectedResults += "    Exhaust Gas Sensor heater      enabled, not complete" + NL;
+        expectedResults += "    Fuel System                not enabled,     complete" + NL;
+        expectedResults += "    Heated catalyst                enabled, not complete" + NL;
+        expectedResults += "    Misfire                    not enabled,     complete" + NL;
+        expectedResults += "    NMHC converting catalyst       enabled, not complete" + NL;
+        expectedResults += "    NOx catalyst/adsorber          enabled, not complete" + NL;
+        expectedResults += "    Secondary air system           enabled, not complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    Cold start aid system          not supported,       completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    Cold start aid system      not enabled,     complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    EGR/VVT system                 not supported,       completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    EGR/VVT system             not enabled,     complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    Exhaust Gas Sensor             not supported,   not completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    Exhaust Gas Sensor         not enabled, not complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    Heated catalyst                not supported,   not completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    Heated catalyst            not enabled, not complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    NMHC converting catalyst       not supported,       completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    NMHC converting catalyst   not enabled,     complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    NOx catalyst/adsorber          not supported,   not completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "    NOx catalyst/adsorber      not enabled, not complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    Secondary air system           not supported,       completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.d Fail if any response indicates number of warm-ups since code clear is not zero"
+        expectedResults += "    Secondary air system       not enabled,     complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.d - Response indicates number of warm-ups since code clear is not zero"
                 + NL;
         expectedResults += "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                 + NL;
         expectedResults += "DM26 from Transmission #1 (3): Warm-ups: 4, Time Since Engine Start: 0 seconds"
                 + NL + NL;
-        expectedResults += "FAIL: 6.1.14.2.e Fail if any response indicates time since engine start is not zero" + NL;
+        expectedResults += "FAIL: 6.1.14.2.e - Response indicates time since engine start is not zero" + NL;
         expectedResults += "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                 + NL + NL;
-        expectedResults += "WARN: 6.1.14.3.a Warn if any individual required monitor, except Continuous Component Monitoring (CCM) is supported by more than one OBD ECU"
+        expectedResults += "WARN: 6.1.14.3.a - An individual required monitor is supported by more than one OBD ECU"
                 + NL;
         expectedResults += "A/C system refrigerant     has reporting from more than one OBD ECU" + NL;
         expectedResults += "Boost pressure control sys has reporting from more than one OBD ECU" + NL;
@@ -320,7 +303,7 @@ public class Step14ControllerTest extends AbstractControllerTest {
         expectedResults += "Diesel Particulate Filter  has reporting from more than one OBD ECU" + NL;
         expectedResults += "Evaporative system         has reporting from more than one OBD ECU" + NL;
         expectedResults += "Exhaust Gas Sensor heater  has reporting from more than one OBD ECU" + NL;
-        expectedResults += "FAIL: 6.1.14.5.a Fail if any difference compared to data received during global request"
+        expectedResults += "FAIL: 6.1.14.5.a - Difference compared to data received during global request"
                 + NL;
 
         assertEquals(expectedResults, listener.getResults());
@@ -366,8 +349,7 @@ public class Step14ControllerTest extends AbstractControllerTest {
         DM26TripDiagnosticReadinessPacket packet1 = new DM26TripDiagnosticReadinessPacket(
                 Packet.create(PGN, 0x01, 0x11, 0x22, 0x33, 0x44, 0x55, 0x66, 0x77, 0x88));
         DM26TripDiagnosticReadinessPacket packet3 = new DM26TripDiagnosticReadinessPacket(
-                Packet.create(PGN, 0x03, 0x11, 0x22, (byte) 0x0A, 0x44, 0x55, 0x66, 0x77,
-                              0x88));
+                Packet.create(PGN, 0x03, 0x11, 0x22, (byte) 0x0A, 0x44, 0x55, 0x66, 0x77, 0x88));
 
         List<Integer> obdModuleAddresses = Arrays.asList(0x01, 0x03);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
@@ -378,25 +360,14 @@ public class Step14ControllerTest extends AbstractControllerTest {
         OBDModuleInformation obdModule1 = new OBDModuleInformation(0x01);
         obdModule1.setMonitoredSystems(obdPacket1.getMonitoredSystems());
 
-        when(dataRepository.getObdModules()).thenReturn(new HashSet<>() {
-            {
-                add(obdModule1);
-            }
-        });
+        when(dataRepository.getObdModules()).thenReturn(Set.of(obdModule1));
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, new ArrayList<>() {
-                    {
-                        add(packet1);
-                        add(packet3);
-                    }
-                }, Collections.singletonList(ackPacket)));
+                .thenReturn(new RequestResult<>(false, List.of(packet1, packet3), List.of(ackPacket)));
         when(dtcModule.requestDM26(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false,
-                                                Collections.emptyList(), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(), List.of()));
         when(dtcModule.requestDM26(any(), eq(0x03)))
-                .thenReturn(new RequestResult<>(false,
-                                                Collections.emptyList(), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -412,37 +383,36 @@ public class Step14ControllerTest extends AbstractControllerTest {
         verify(mockListener, times(7)).addOutcome(PART_NUMBER,
                                                   STEP_NUMBER,
                                                   FAIL,
-                                                  "6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response");
+                                                  "6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
-                                                + NL + "    Comprehensive component        not supported,       completed");
+                                        "6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
+                                                + NL + "    Comprehensive component    not enabled,     complete");
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         FAIL,
-                                        "6.1.14.2.b Fail if any response from an ECU indicating support for CCM monitor in DM5 is report as not supported by DM26 response");
+                                        "6.1.14.2.b - Response from an ECU indicating support for CCM monitor in DM5 is report as not enabled by DM26 response");
 
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.2.d Fail if any response indicates number of warm-ups since code clear is not zero" + NL +
+                                        "6.1.14.2.d - Response indicates number of warm-ups since code clear is not zero" + NL +
                                                 "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                                                 + NL +
                                                 "DM26 from Transmission #1 (3): Warm-ups: 10, Time Since Engine Start: 8,721 seconds"
                                                 + NL);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.2.e Fail if any response indicates time since engine start is not zero" + NL +
+                                        "6.1.14.2.e - Response indicates time since engine start is not zero" + NL +
                                                 "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                                                 + NL);
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN,
-                                        "6.1.14.4.a Destination Specific DM5 requests to OBD modules did not return any responses");
-        // verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, "");
+                                        "6.1.14.4.a - Destination Specific DM5 requests to OBD modules did not return any responses");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.2.e Fail if any response indicates time since engine start is not zero" + NL +
+                                        "6.1.14.2.e - Response indicates time since engine start is not zero" + NL +
                                                 "DM26 from Transmission #1 (3): Warm-ups: 10, Time Since Engine Start: 8,721 seconds" + NL);
         verify(mockListener).addOutcome(PART_NUMBER,
                                         STEP_NUMBER,
                                         WARN,
-                                        "6.1.14.3.a Warn if any individual required monitor, except Continuous Component Monitoring (CCM) is supported by more than one OBD ECU"
+                                        "6.1.14.3.a - An individual required monitor is supported by more than one OBD ECU"
                                                 + NL + "A/C system refrigerant     has reporting from more than one OBD ECU"
                                                 + NL + "Boost pressure control sys has reporting from more than one OBD ECU"
                                                 + NL + "Catalyst                   has reporting from more than one OBD ECU"
@@ -450,61 +420,61 @@ public class Step14ControllerTest extends AbstractControllerTest {
                                                 + NL + "Evaporative system         has reporting from more than one OBD ECU"
                                                 + NL + "Exhaust Gas Sensor heater  has reporting from more than one OBD ECU");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN,
-                                        "6.1.14.4.a Destination Specific DM5 requests to OBD modules did not return any responses");
+                                        "6.1.14.4.a - Destination Specific DM5 requests to OBD modules did not return any responses");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.5.a Fail if any difference compared to data received during global request");
+                                        "6.1.14.5.a - Difference compared to data received during global request");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.14.5.b Fail if NACK not received from OBD ECUs that did not respond to global query");
+                                        "6.1.14.5.b - NACK not received from OBD ECUs that did not respond to global query");
 
         String expectedResults = NL + "Vehicle Composite of DM26:" + NL;
-        expectedResults += "    A/C system refrigerant             supported,   not completed" + NL;
-        expectedResults += "    Boost pressure control sys         supported,       completed" + NL;
-        expectedResults += "    Catalyst                           supported,   not completed" + NL;
-        expectedResults += "    Cold start aid system          not supported,       completed" + NL;
-        expectedResults += "    Comprehensive component            supported,   not completed" + NL;
-        expectedResults += "    Diesel Particulate Filter          supported,       completed" + NL;
-        expectedResults += "    EGR/VVT system                 not supported,       completed" + NL;
-        expectedResults += "    Evaporative system                 supported,   not completed" + NL;
-        expectedResults += "    Exhaust Gas Sensor             not supported,   not completed" + NL;
-        expectedResults += "    Exhaust Gas Sensor heater          supported,   not completed" + NL;
-        expectedResults += "    Fuel System                    not supported,       completed" + NL;
-        expectedResults += "    Heated catalyst                not supported,   not completed" + NL;
-        expectedResults += "    Misfire                        not supported,       completed" + NL;
-        expectedResults += "    NMHC converting catalyst       not supported,       completed" + NL;
-        expectedResults += "    NOx catalyst/adsorber          not supported,   not completed" + NL;
-        expectedResults += "    Secondary air system           not supported,       completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "    A/C system refrigerant         enabled, not complete" + NL;
+        expectedResults += "    Boost pressure control sys     enabled,     complete" + NL;
+        expectedResults += "    Catalyst                       enabled, not complete" + NL;
+        expectedResults += "    Cold start aid system      not enabled,     complete" + NL;
+        expectedResults += "    Comprehensive component        enabled, not complete" + NL;
+        expectedResults += "    Diesel Particulate Filter      enabled,     complete" + NL;
+        expectedResults += "    EGR/VVT system             not enabled,     complete" + NL;
+        expectedResults += "    Evaporative system             enabled, not complete" + NL;
+        expectedResults += "    Exhaust Gas Sensor         not enabled, not complete" + NL;
+        expectedResults += "    Exhaust Gas Sensor heater      enabled, not complete" + NL;
+        expectedResults += "    Fuel System                not enabled,     complete" + NL;
+        expectedResults += "    Heated catalyst            not enabled, not complete" + NL;
+        expectedResults += "    Misfire                    not enabled,     complete" + NL;
+        expectedResults += "    NMHC converting catalyst   not enabled,     complete" + NL;
+        expectedResults += "    NOx catalyst/adsorber      not enabled, not complete" + NL;
+        expectedResults += "    Secondary air system       not enabled,     complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response for a monitor in DM5 is reported as not supported and is reported as supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.b - Response for a monitor in DM5 is reported as not supported and is reported as enabled by DM26 response"
                 + NL;
-        expectedResults += "    Comprehensive component        not supported,       completed" + NL;
-        expectedResults += "FAIL: 6.1.14.2.b Fail if any response from an ECU indicating support for CCM monitor in DM5 is report as not supported by DM26 response"
+        expectedResults += "    Comprehensive component    not enabled,     complete" + NL;
+        expectedResults += "FAIL: 6.1.14.2.b - Response from an ECU indicating support for CCM monitor in DM5 is report as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.a Fail if any response for a monitor in DM5 is reported as supported and is reported as not supported by DM26 response"
+        expectedResults += "FAIL: 6.1.14.2.a - Response for a monitor in DM5 is reported as supported and is reported as not enabled by DM26 response"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.2.d Fail if any response indicates number of warm-ups since code clear is not zero"
+        expectedResults += "FAIL: 6.1.14.2.d - Response indicates number of warm-ups since code clear is not zero"
                 + NL;
         expectedResults += "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                 + NL;
         expectedResults += "DM26 from Transmission #1 (3): Warm-ups: 10, Time Since Engine Start: 8,721 seconds"
                 + NL + NL;
-        expectedResults += "FAIL: 6.1.14.2.e Fail if any response indicates time since engine start is not zero" + NL;
+        expectedResults += "FAIL: 6.1.14.2.e - Response indicates time since engine start is not zero" + NL;
         expectedResults += "DM26 from Engine #2 (1): Warm-ups: 51, Time Since Engine Start: 8,721 seconds"
                 + NL + NL;
-        expectedResults += "FAIL: 6.1.14.2.e Fail if any response indicates time since engine start is not zero" + NL;
+        expectedResults += "FAIL: 6.1.14.2.e - Response indicates time since engine start is not zero" + NL;
         expectedResults += "DM26 from Transmission #1 (3): Warm-ups: 10, Time Since Engine Start: 8,721 seconds"
                 + NL + NL;
-        expectedResults += "WARN: 6.1.14.3.a Warn if any individual required monitor, except Continuous Component Monitoring (CCM) is supported by more than one OBD ECU"
+        expectedResults += "WARN: 6.1.14.3.a - An individual required monitor is supported by more than one OBD ECU"
                 + NL;
         expectedResults += "A/C system refrigerant     has reporting from more than one OBD ECU"
                 + NL;
@@ -518,11 +488,11 @@ public class Step14ControllerTest extends AbstractControllerTest {
                 + NL;
         expectedResults += "Exhaust Gas Sensor heater  has reporting from more than one OBD ECU"
                 + NL;
-        expectedResults += "WARN: 6.1.14.4.a Destination Specific DM5 requests to OBD modules did not return any responses"
+        expectedResults += "WARN: 6.1.14.4.a - Destination Specific DM5 requests to OBD modules did not return any responses"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.5.a Fail if any difference compared to data received during global request"
+        expectedResults += "FAIL: 6.1.14.5.a - Difference compared to data received during global request"
                 + NL;
-        expectedResults += "FAIL: 6.1.14.5.b Fail if NACK not received from OBD ECUs that did not respond to global query"
+        expectedResults += "FAIL: 6.1.14.5.b - NACK not received from OBD ECUs that did not respond to global query"
                 + NL;
         assertEquals(expectedResults, listener.getResults());
     }
@@ -537,20 +507,16 @@ public class Step14ControllerTest extends AbstractControllerTest {
         DM26TripDiagnosticReadinessPacket packet1 = new DM26TripDiagnosticReadinessPacket(
                 Packet.create(PGN, 0x01, 0x00, 0x00, 0x00, 0x44, 0x55, 0x66, 0x77, 0x88));
 
-        List<Integer> obdModuleAddresses = Collections.singletonList(0x01);
+        List<Integer> obdModuleAddresses = List.of(0x01);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
 
         OBDModuleInformation obdModule1 = new OBDModuleInformation(0x01);
         obdModule1.setMonitoredSystems(packet1.getMonitoredSystems());
-        when(dataRepository.getObdModules()).thenReturn(new HashSet<OBDModuleInformation>() {
-            {
-                add(obdModule1);
-            }
-        });
+        when(dataRepository.getObdModules()).thenReturn(Set.of(obdModule1));
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
         when(dtcModule.requestDM26(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -563,22 +529,22 @@ public class Step14ControllerTest extends AbstractControllerTest {
         verify(dtcModule).requestDM26(any(), eq(0x01));
 
         String expectedResults = NL + "Vehicle Composite of DM26:" + NL;
-        expectedResults += "    A/C system refrigerant             supported,   not completed" + NL;
-        expectedResults += "    Boost pressure control sys         supported,       completed" + NL;
-        expectedResults += "    Catalyst                           supported,   not completed" + NL;
-        expectedResults += "    Cold start aid system          not supported,       completed" + NL;
-        expectedResults += "    Comprehensive component            supported,   not completed" + NL;
-        expectedResults += "    Diesel Particulate Filter          supported,       completed" + NL;
-        expectedResults += "    EGR/VVT system                 not supported,       completed" + NL;
-        expectedResults += "    Evaporative system                 supported,   not completed" + NL;
-        expectedResults += "    Exhaust Gas Sensor             not supported,   not completed" + NL;
-        expectedResults += "    Exhaust Gas Sensor heater          supported,   not completed" + NL;
-        expectedResults += "    Fuel System                    not supported,       completed" + NL;
-        expectedResults += "    Heated catalyst                not supported,   not completed" + NL;
-        expectedResults += "    Misfire                        not supported,       completed" + NL;
-        expectedResults += "    NMHC converting catalyst       not supported,       completed" + NL;
-        expectedResults += "    NOx catalyst/adsorber          not supported,   not completed" + NL;
-        expectedResults += "    Secondary air system           not supported,       completed" + NL;
+        expectedResults += "    A/C system refrigerant         enabled, not complete" + NL;
+        expectedResults += "    Boost pressure control sys     enabled,     complete" + NL;
+        expectedResults += "    Catalyst                       enabled, not complete" + NL;
+        expectedResults += "    Cold start aid system      not enabled,     complete" + NL;
+        expectedResults += "    Comprehensive component        enabled, not complete" + NL;
+        expectedResults += "    Diesel Particulate Filter      enabled,     complete" + NL;
+        expectedResults += "    EGR/VVT system             not enabled,     complete" + NL;
+        expectedResults += "    Evaporative system             enabled, not complete" + NL;
+        expectedResults += "    Exhaust Gas Sensor         not enabled, not complete" + NL;
+        expectedResults += "    Exhaust Gas Sensor heater      enabled, not complete" + NL;
+        expectedResults += "    Fuel System                not enabled,     complete" + NL;
+        expectedResults += "    Heated catalyst            not enabled, not complete" + NL;
+        expectedResults += "    Misfire                    not enabled,     complete" + NL;
+        expectedResults += "    NMHC converting catalyst   not enabled,     complete" + NL;
+        expectedResults += "    NOx catalyst/adsorber      not enabled, not complete" + NL;
+        expectedResults += "    Secondary air system       not enabled,     complete" + NL;
         assertEquals(expectedResults, listener.getResults());
     }
 }
